# trimble_cu_capstone

./: .gitmodules
EI_Code/: sketch_oct28a.ino
EI_Code/EI_WiFi/: EI_WiFi.ino
EI_Code/IT_Wifi/: IT_Wifi.ino
EI_Code/UART_RX-Data/: UART_RX-Data.ino
EI_Code/et_test/: et_test.ino
EI_Code/wifi_test_EI/: wifi_test_EI.ino
ESP32_HAT/IT_ET_UART/UART_FW/power_ctl/: CMakeLists.txt  power_ctl.ino
ESP32_LED/: .cproject  .project
ESP32_LED/Student_PWM_F20/: .cproject  .project  imported_project_report.html
ESP32_LED/et_test/: et_test.ino
ESP32_LED/uart_test/: uart_test.ino
ESP32_LED/wifi_test/: wifi_test.ino
ET_Code/ET_UART_WiFi/: ET_UART_WiFi.ino
ET_Code/ET_Wifi/: ET_Wifi.ino
ET_Code/ET_basic/: ET_basic.ino
ET_Code/UART_RX-Data/: UART_RX-Data.ino
ET_Code/uart_test/: uart_test.ino
ET_Code/wifi_test_EI/: wifi_test_EI.ino
IPD_ROS2/: EXTPAR_CAL.py  Extrinsic_params_service.txt  test_cal.py
Jetson_Dev/IT2_jetson/: IT2_Jetson_UART.py  IT2_Jetson_centroids.py  IT2_Jetson_script.py
Jetson_Dev/IT_Jetson_UART/: IT1_Jetson.py  pc_frontpanel.py
Jetson_Dev/PNP/: matrix_util.py  parse_params.py  pnp.py  pnp_modular.py  pnp_tests.txt  test_pnp.py
Jetson_Dev/intrinsic_params/: parse_params.py
Jetson_Dev/pnp_testing/: pnp_module.py
Jetson_Dev/poc_camera/: PnP_Solver.py  Running_notes.txt  blob_detect.py  calibration_script.py  canny_test.py  new_lens_test.py  poc_script.py  test_cam.sh
pySerialTransfer/: create_live_pypi.bat
test_SF/: .cproject  sdkconfig
trimble_ipd/: Arducam_Feb04_intrinsic_parameters.json  package.xml  setup.cfg  setup.py
(+237 files in other folders)
